--- a/core/templates/cadastro.html
+++ b/core/templates/cadastro.html
@@ -5,14 +5,14 @@
 
 <p class="h3 mb-3 font-weight-normal">CADASTRE-SE</p>
 
-<label for= "inputPassword" class="sr-only">Email</label> <p class="auten">Email</p> <p class="auten"> {{ form.username }}</p>
+<label for= "inputEmail" class="sr-only"></label> <p class="auten">Email</p> <p class="auten"> {{ form.username }}</p>
 
 
 
-<label for= "inputPassword" class="sr-only"> Senha:</label> <p class="auten">Senha:</p> <p class="auten"> {{ form.password1 }}</p>
+<label for= "inputPassword" class="sr-only"></label> <p class="auten">Senha:</p> <p class="auten"> {{ form.password1 }}</p>
 
 
-<label for= "inputPassword" class="sr-only"> Confirmar Senha:</label> <p class="auten"> Confirmar Senha:</p> <p class="auten"> {{ form.password2 }}</p>
+<label for= "inputPassword" class="sr-only"></label> <p class="auten"> Confirmar Senha:</p> <p class="auten"> {{ form.password2 }}</p>
 
 <p class="auten"><a href="{% url 'usuario' %}"><button class="btn btn-lg btn-primary " type="submit">Cadastrar Usuário</button></a></p>
 </form>
