Fiz a página de login

--- a/core/templates/cadastro.html
+++ b/core/templates/cadastro.html
@@ -1,4 +1,9 @@
+{% load widget_tweaks %}
+
+
+
 <form method="post" class="form-signin">
+{% csrf_token %}
 
 <p class="h3 mb-3 font-weight-normal">CADASTRE-SE</p>
 
