--- a/core/templates/paginainicial.html
+++ b/core/templates/paginainicial.html
@@ -3,6 +3,9 @@
 
 <html>
 
+<link rel="stylesheet" type="text/css"
+href="/static/css/css.css">
+
 <head>
 
 	<title> Boutique da Luh </title>
@@ -22,20 +25,32 @@
 <script type="text/javascript" src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Alterna navegação">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(Página atual)</span></a>
-      <a class="nav-item nav-link" href="#">Destaques</a>
-      <a class="nav-item nav-link" href="#">Preços</a>
-      <a class="nav-item nav-link disabled" href="#">Desativado</a>
-    </div>
-  </div>
-</nav>
+<div class="col-xl-12">
+		<div class="row">
+			<div class="col-xl-12">
+				<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+					<a class="navbar-brand" href="login.html">Login</a>
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" 
+					aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav mr-auto">
+						<li class="nav-item">
+							<a class="nav-link disabled" href="#"> Sugestões </a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link disabled" href="#"> Reclamações </a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link disabled" href="#"> Nossa Equipe</a>
+						</li>
+					</ul>
+				</div>
+			</nav>
+		</div>
+	</div>
 
 </body>
 </html>
