--- a/core/templates/paginainicial.html
+++ b/core/templates/paginainicial.html
@@ -1,5 +1,6 @@
-<!doctype html>
 {% load static %}
+<!doctype html>
+
 
 <html>
 
@@ -9,6 +10,9 @@ href="/static/css/css.css">
 <head>
 
 	<title> Boutique da Luh </title>
+
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/modern-business.css' %}">
@@ -29,7 +33,7 @@ href="/static/css/css.css">
 		<div class="row">
 			<div class="col-xl-12">
 				<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-					<a class="navbar-brand" href="login.html">Login</a>
+					<a class="navbar-brand" href="cadastro.html">Login</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" 
 					aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
