--- a/core/templates/paginainicial.html
+++ b/core/templates/paginainicial.html
@@ -54,5 +54,65 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
   </div>
 </nav>
 
+<div class="row">
+        <div id="carouselExampleIndicators" class="carousel slide centro" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+
+            <br>
+            <div class="carousel-inner">
+                <div class="carousel-item active" class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                    <img class="d-block w-100 im" src="imagens/xadrez.jpg" alt="First slide" width="400px" height="450px">
+                    <div class="carousel-caption d-none d-md-block est">
+                        <h5> O xadrez está em alta</h5>
+                        <p></p>
+                    </div>
+                </div>
+
+                <div class="carousel-item" class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
+                    <img class="d-block w-100 im" src="imagens/vestido.jpg" alt="Second slide" width="400px" height="450px">
+                    <div class="carousel-caption d-none d-md-block est">
+                        <h5> NEWS </h5>
+                        <p></p>
+                    </div>
+                </div>
+
+                <div class="carousel-item" class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
+                    <img class="d-block w-100 im" src="imagens/sabrina.jpg" alt="Third slide" width="400px" height="450px" >
+                    <div class="carousel-caption d-none d-md-block est">
+                        <h5> NEWS </h5>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+            
+
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div> 
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+crossorigin="anonymous"></script>
+<script
+src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+crossorigin="anonymous"></script>
+<script
+src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+crossorigin="anonymous"></script>
+
 </body>
 </html>
