--- a/core/templates/paginainicial.html
+++ b/core/templates/paginainicial.html
@@ -1,12 +1,8 @@
-{% load static %}
-
 <!doctype html>
 
-
 <html>
-
-<link rel="stylesheet" type="text/css"
-href="/static/css/css.css">
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/css.css' %}">
 
 <head>
 
@@ -65,7 +61,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
             <br>
             <div class="carousel-inner">
                 <div class="carousel-item active" class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                    <img class="d-block w-100 im" src="imagens/xadrez.jpg" alt="First slide" width="400px" height="450px">
+                    <img class="d-block w-100 im" src="{% static 'imagens/xadrez.jpg' %}" alt="First slide" width="400px" height="450px">
                     <div class="carousel-caption d-none d-md-block est">
                         <h5> O xadrez está em alta</h5>
                         <p></p>
@@ -73,7 +69,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
                 </div>
 
                 <div class="carousel-item" class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-                    <img class="d-block w-100 im" src="imagens/vestido.jpg" alt="Second slide" width="400px" height="450px">
+                    <img class="d-block w-100 im" src="{% static 'imagens/vestido.jpg' %}" alt="Second slide" width="400px" height="450px">
                     <div class="carousel-caption d-none d-md-block est">
                         <h5> NEWS </h5>
                         <p></p>
@@ -81,7 +77,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
                 </div>
 
                 <div class="carousel-item" class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-                    <img class="d-block w-100 im" src="imagens/sabrina.jpg" alt="Third slide" width="400px" height="450px" >
+                    <img class="d-block w-100 im" src="{% static'imagens/sabrina.jpg' %}" alt="Third slide" width="400px" height="450px" >
                     <div class="carousel-caption d-none d-md-block est">
                         <h5> NEWS </h5>
                         <p></p>
