--- a/core/templates/paginainicial.html
+++ b/core/templates/paginainicial.html
@@ -54,6 +54,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
   </div>
 </nav>
 
+{% block conteudo %}
 <div class="row">
         <div id="carouselExampleIndicators" class="carousel slide centro" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -113,6 +114,9 @@ crossorigin="anonymous"></script>
 src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
 integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
 crossorigin="anonymous"></script>
+
+
+  {% endblock %}
 
 </body>
 </html>
