--- a/core/templates/cadastro.html
+++ b/core/templates/cadastro.html
@@ -1,11 +1,18 @@
+{% extends 'paginainicial.html' %}
 {% load widget_tweaks %}
 
+{% block conteudo %}
+
+
+
+  <link rel="stylesheet" type="text/css"
+  href="/static/css/estilo.css">
 
 
 <form method="post" class="form-signin">
 {% csrf_token %}
 
-<p class="h3 mb-3 font-weight-normal">CADASTRE-SE</p>
+<p class="h3 mb-3 font-weight-normal">Cadastre-se</p>
 
 <label for= "inputEmail" class="sr-only"></label> <p class="auten">Email</p> <p class="auten"> {{ form.username }}</p>
 
@@ -18,3 +25,6 @@
 
 <p class="auten"><a href="{% url 'usuario' %}"><button class="btn btn-lg btn-primary " type="submit">Cadastrar Usuário</button></a></p>
 </form>
+
+
+{% endblock %}
