--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -1,11 +1,15 @@
-
+{% extends 'paginainicial.html' %}
 {% load widget_tweaks %}
 
+{% block conteudo %}
+
+<link rel="stylesheet" type="text/css"
+href="/static/css/estilo.css">
 
 <form method="post" class="form-signin">
 {% csrf_token %}
 
-<h4 class="h3 mb-3 font-weight-normal">LOGIN</h4> <br/>
+<h4 class="h3 mb-3 font-weight-normal">Login</h4> <br/>
 <label for="inputEmail" class="sr-only"></label> <p class="auten">Email</p> <p class="auten"> {{ form.username }}</p>
 
 <label for="inputPassword" class="sr-only"></label>
@@ -17,4 +21,6 @@
 </div>
 <p class="auten"><a class="auten" href="{% url 'usuario' %}"> <button class="btn btn-lg btn-primary" type="submit">Entrar</button></a></p>
 
+
+{% endblock %}
 </form>
