--- a/core/templates/paginainicial.html
+++ b/core/templates/paginainicial.html
@@ -1,7 +1,7 @@
 <!doctype html>
-
+{% load static %} 
 <html>
-{% load static %}
+
 <link rel="stylesheet" type="text/css" href="{% static 'css/css.css' %}">
 
 <head>
@@ -23,8 +23,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 
 <body>
 
-<script type="text/javascript" src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
+
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Alterna navegação">
@@ -32,9 +31,9 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
   </button>
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
     <a class="navbar-brand" href="#"> Boutique da Luh </a>
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+    <ul class="navbar-nav mr-auto mt-lg-0">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(Página atual)</span></a>
+        <a class="nav-link" href="#"> Home <span class="sr-only">(Página atual)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#"> Login </a>
@@ -78,7 +77,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
                 </div>
 
                 <div class="carousel-item" class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-                    <img class="d-block w-100 im" src="{% static'imagens/sabrina.jpg' %}" alt="Third slide" width="400px" height="450px" >
+                    <img class="d-block w-100 im" src="{% static 'imagens/sabrina.jpg' %}" alt="Third slide" width="400px" height="450px" >
                     <div class="carousel-caption d-none d-md-block est">
                         <h5> NEWS </h5>
                         <p></p>
@@ -113,6 +112,8 @@ crossorigin="anonymous"></script>
 
 
   {% endblock %}
+<script type="text/javascript" src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
 
 </body>
 </html>
