--- a/core/templates/paginainicial.html
+++ b/core/templates/paginainicial.html
@@ -2,7 +2,7 @@
 {% load static %} 
 <html>
 
-<link rel="stylesheet" type="text/css" href="{% static 'css/css.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/estilo.css' %}">
 
 <head>
 
