--- a/core/static/css/estilo.css
+++ b/core/static/css/estilo.css
@@ -1,16 +1,26 @@
 body{
-background-image: url(imagem1.jpg);
+	background-image: url(imagem1.jpg);
+	padding: 0 !important;
 }
 .auten {
 	text-align: center;
 	font-weight: bold;
+	text-decoration: purple;
 }
-nav{
-	color: purple !important;
+.nav-link{
+	color: white !important;
+}
+nav.bg-dark{
+	background: purple !important;
 }
 h4{
 	text-align: center;
+	font-weight: bolder;
 }
-body{
-	padding: 0 !important;
+p{
+	text-align: center;
+	font-weight: bolder;
+}
+.btn-prog{
+	background: purple !important;
 }
