--- a/core/templates/cadastro.html
+++ b/core/templates/cadastro.html
@@ -12,8 +12,11 @@
 <form method="post" class="form-signin">
 {% csrf_token %}
 
-<p class="h3 mb-3 font-weight-normal">Cadastre-se</p>
 
+<br/>
+<br/>
+<p class="h3 mb-3 font-weight-normal">Cadastre-se</p>
+<br/>
 <label for= "inputEmail" class="sr-only"></label> <p class="auten">Email</p> <p class="auten"> {{ form.username }}</p>
 
 
@@ -23,7 +26,7 @@
 
 <label for= "inputPassword" class="sr-only"></label> <p class="auten"> Confirmar Senha:</p> <p class="auten"> {{ form.password2 }}</p>
 
-<p class="auten"><a href="{% url 'usuario' %}"><button class="btn btn-lg btn-primary " type="submit">Cadastrar Usuário</button></a></p>
+<p class="auten"><a href="{% url 'usuario' %}"><button class="btn-prog btn-lg btn-primary " type="submit">Cadastrar Usuário</button></a></p>
 </form>
 
 
