consertando pagina inicial

--- a/core/templates/paginainicial.html
+++ b/core/templates/paginainicial.html
@@ -1,6 +1,8 @@
-<!doctype html>
-{% load static %} 
+<!DOCTYPE html>
+
 <html>
+
+{% load static %} 
 
 <link rel="stylesheet" type="text/css" href="{% static 'css/estilo.css' %}">
 
