--- a/core/templates/paginainicial.html
+++ b/core/templates/paginainicial.html
@@ -30,7 +30,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Alterna navegação">
     <span class="navbar-toggler-icon"></span>
-  </button>
+  </button>a
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
     <a class="navbar-brand" href= "{% url 'paginainicial' %}"> Boutique da Luh </a>
     <ul class="navbar-nav ml-auto mt-lg-0">
@@ -60,7 +60,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
             <br>
             <div class="carousel-inner">
                 <div class="carousel-item active" class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                    <img class="d-block w-100 im" src="{% static 'imagens/xadrez.jpg' %}" alt="First slide" width="400px" height="450px">
+                    <img class="d-block w-100 im" src="{% static 'imagens/xadrez.jpeg' %}" alt="First slide" width="400px" height="450px">
                     <div class="carousel-caption d-none d-md-block est">
                         <h5> O xadrez está em alta</h5>
                         <p></p>
@@ -68,7 +68,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
                 </div>
 
                 <div class="carousel-item" class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-                    <img class="d-block w-100 im" src="{% static 'imagens/vestido.jpg' %}" alt="Second slide" width="400px" height="450px">
+                    <img class="d-block w-100 im" src="{% static 'imagens/vestido.jpeg' %}" alt="Second slide" width="400px" height="450px">
                     <div class="carousel-caption d-none d-md-block est">
                         <h5> NEWS </h5>
                         <p></p>
@@ -76,7 +76,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
                 </div>
 
                 <div class="carousel-item" class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-                    <img class="d-block w-100 im" src="{% static 'imagens/sabrina.jpg' %}" alt="Third slide" width="400px" height="450px" >
+                    <img class="d-block w-100 im" src="{% static 'imagens/sabrina.jpeg' %}" alt="Third slide" width="400px" height="450px" >
                     <div class="carousel-caption d-none d-md-block est">
                         <h5> NEWS </h5>
                         <p></p>
