--- a/core/templates/paginainicial.html
+++ b/core/templates/paginainicial.html
@@ -49,7 +49,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 </nav>
 
 {% block conteudo %}
-<div class="row" align="center">
+<div class="row d-flex justify-content-center">
         <div id="carouselExampleIndicators" class="carousel slide centro" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
