--- a/templates/usuario.html
+++ b/templates/usuario.html
@@ -36,6 +36,8 @@ href="/static/css/estilo.css">
 <h3 class="roupa"> Vestido - R$ 40,00 </h3>
 <!-- <p class="roupa"> </p> -->
 <p class="auten"><button class="btn-prog btn-lg btn-primary " type="submit">Comprar</button></p>
+
+<p><a href="{% url 'account_logout' %}">Logout</a></p>
 </div>
 </div>
 
