--- a/templates/index.html
+++ b/templates/index.html
@@ -34,16 +34,14 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-    <a class="navbar-brand" href= "{% url 'paginainicial' %}"> Boutique da Luh </a>
+    <a class="navbar-brand" href= "{% url 'inicio' %}"> Boutique da Luh </a>
     <ul class="navbar-nav ml-auto mt-lg-0">
- <!--     <li class="nav-item active">
-        <a class="nav-link" href="{% url 'paginainicial' %}"> Home <span class="sr-only">(Página atual)</span></a>
-      </li> -->
+
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'login' %}"> Login </a>
+        <a class="nav-link" href="{% url 'account_login' %}"> Login </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'cadastro' %}"> Cadastro </a>
+        <a class="nav-link" href="{% url 'account_signup' %}"> Cadastro </a>
       </li>
     </ul>
     
