--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,4 +1,4 @@
-{% extends 'paginainicial.html' %}
+{% extends 'index.html' %}
 {% load widget_tweaks %}
 
 {% block conteudo %}
@@ -7,28 +7,20 @@
 href="/static/css/estilo.css">
 
 <form method="post" class="form-signin">
+<br/>
+<br/>
 	{% csrf_token %}
-	{{ form.as_p}}
-	<button type="submit">Autenticar</button>
-</form>
-
-<br/>
-<br/>
-<h4 class="h3 mb-3 font-weight-normal">Login</h4> 
-<br/>
-
-<label for="inputEmail" class="sr-only"></label> <p class="auten">Email</p> <p class="auten"> {{ form.username }}</p>
 
 <label for="inputPassword" class="sr-only"></label>
-<p class="auten"> Senha</p> <p class="auten"> {{ form.password }} </p>
+<h4 class="h3 mb-3 font-weight-normal"> Login </h4> <p class="auten"> {{ form.as_p }} </p>
 
 <br/>
 
 <div class="checkbox mb-3">
 </div>
 <p class="auten"><a class="auten" href="{% url 'usuario' %}"> <button class="btn-prog btn-lg btn-primary" type="submit">Entrar</button></a></p>
-
+</form>
 
 {% endblock %}
-</form>
+
 
