--- a/templates/usuario.html
+++ b/templates/usuario.html
@@ -1,4 +1,4 @@
-{% extends 'paginainicial.html' %}
+{% extends 'index.html' %}
 {% load widget_tweaks %}
 {% load static %}
 
@@ -40,7 +40,8 @@ href="/static/css/estilo.css">
 <p><a href="{% url 'account_logout' %}">Logout</a></p>
 </div>
 </div>
+</form>
 
 {% endblock %}
-</form>
+
 
