--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-    <a class="navbar-brand" href= "{% url 'inicio' %}"> Boutique da Luh </a>
+    <a class="navbar-brand" href= "{url 'index.html'}"> Boutique da Luh </a>
     <ul class="navbar-nav ml-auto mt-lg-0">
 
       <li class="nav-item">
