--- a/templates/index.html
+++ b/templates/index.html
@@ -34,15 +34,24 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-    <a class="navbar-brand" href= "{url 'index.html'}"> Boutique da Luh </a>
+    <a class="navbar-brand" href= "{% url 'index' %}"> Boutique da Luh </a>
     <ul class="navbar-nav ml-auto mt-lg-0">
+      {% if user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'usuario' %}"> Produtos </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'account_logout' %}"> Sair </a>
+        </li>
+      {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'account_login' %}"> Login </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'account_signup' %}"> Cadastro </a>
+        </li>
+      {% endif %}
 
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'account_login' %}"> Login </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'account_signup' %}"> Cadastro </a>
-      </li>
     </ul>
     
   </div>
