--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -12,7 +12,7 @@ href="/static/css/estilo.css">
 	{% csrf_token %}
 
 <label for="inputPassword" class="sr-only"></label>
-<h4 class="h3 mb-3 font-weight-normal"> Login </h4> <p class="auten"> {{ form.as_p }} </p>
+<h4 class="h3 mb-3 font-weight-normal"> Login </h4> <p class="u"> {{ form.as_p }} </p>
 
 <br/>
 
