--- a/templates/index.html
+++ b/templates/index.html
@@ -46,35 +46,10 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 </head>
 
 
-<body>
+<body class="b" data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 
-<header class="site-navbar js-sticky-header site-navbar-target" role="banner">
 
-      <div class="container">
-        <div class="row align-items-center position-relative">
-  <div class="site-logo">
-              <a href="index.html" class="text-black"><span class="text-primary">Boutique da Luh</a>
-            </div>
-            
-              <nav class="site-navigation text-center ml-auto" role="navigation">
-
-                <ul class="site-menu main-menu js-clone-nav ml-auto d-none d-lg-block">
-                  <li class="temp"><a href="
-                  <li class="temp"><a href="#blog-section" class="nav-link">Login</a></li>
-                  <li class="temp"><a href="#contact-section" class="nav-link">Cadastro</a></li>
-                </ul>
-              </nav>
-              <div class="toggle-button d-inline-block d-lg-none"><a href="#" class="site-menu-toggle py-5 js-menu-toggle text-black"><span class="icon-menu h3"></span></a></div>
-
-        </div>
-      </div>
-    </header>
-    <div class="owl-carousel slide-one-item">
-      <a href="#"><img src="imagens/xadrez.jpeg" alt="Image" class="img-fluid"></a>
-      <a href="#"><img src="imagens/vestido.jpeg" alt="Image" class="img-fluid"></a>
-    </div>
-
-<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+ <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Alterna navegação">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -95,14 +70,14 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
         <li class="nav-item">
           <a class="nav-link" href="{% url 'account_signup' %}"> Cadastro </a>
         </li> 
-         </ul>
-  </div>
-</nav>-->
+        
       {% endif %}
-
- 
-
+ </ul>
+  </div>
+</nav>
 {% block conteudo %}
+
+
 <div class="row d-flex justify-content-center">
         <div id="carouselExampleIndicators" class="carousel slide centro" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -138,30 +113,61 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
             </a>
         </div>
     </div> 
+ <!--<div class="site-wrap"  id="home-section">
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-crossorigin="anonymous"></script>
-<script
-src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-crossorigin="anonymous"></script>
-<script
-src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-crossorigin="anonymous"></script>
+    <div class="site-mobile-menu site-navbar-target">
+      <div class="site-mobile-menu-header">
+        <div class="site-mobile-menu-close mt-3">
+          <span class="icon-close2 js-menu-toggle"></span>
+        </div>
+      </div>
+      <div class="site-mobile-menu-body"></div>
+    </div>
+<header class="site-navbar js-sticky-header site-navbar-target" role="banner">
 
+      <div class="container">
+        <div class="row align-items-center position-relative">
+            <div class="site-logo">
+              <a href="{% url 'index' %}" class="text-black"><span class="text-primary">Boutique da Luh</a>
+            </div>
+            
+              <nav class="site-navigation text-center ml-auto" role="navigation">
+
+                <ul class="site-menu main-menu js-clone-nav ml-auto d-none d-lg-block">
+                  <li class="temp"><a href="
+                  <li class="temp"><a href="{% url 'account_login' %}" class="nav-link">Login</a></li>
+                  <li class="temp"><a href="{% url 'account_signup' %}" class="nav-link">Cadastro</a></li>
+                </ul>
+              </nav>
+              <div class="toggle-button d-inline-block d-lg-none"><a href="#" class="site-menu-toggle py-5 js-menu-toggle text-black"><span class="icon-menu h3"></span></a></div>
+              </ul>
+        </div>
+      </div>
+    </header>-->
+    
+    <!--<div class="owl-carousel slide-one-item">
+      <a href="#"><img src="imagens/xadrez.jpeg" alt="Image" class="img-fluid"></a>
+      <a href="#"><img src="imagens/vestido.jpeg" alt="Image" class="img-fluid"></a>
+    </div>-->
 
   {% endblock %}
-<script type="text/javascript" src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+  crossorigin="anonymous"></script>
+  <script
+  src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+  integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+  crossorigin="anonymous"></script>
+  <script
+  src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+  integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+  crossorigin="anonymous"></script>
 
 
 
-
-
-
- <script src="{% static 'js2/jquery-3.3.1.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
+  <script src="{% static 'js2/jquery-3.3.1.min.js' %}"></script>
   <script src="{% static 'js2/jquery-ui.js' %}"></script>
   <script src="{% static 'js2/popper.min.js' %}"></script>
   <script src="{% static 'js2/bootstrap.min.js' %}"></script>
@@ -171,7 +177,6 @@ crossorigin="anonymous"></script>
   <script src="{% static 'js2/jquery.waypoints.min.js' %}"></script>
   <script src="{% static 'js2/jquery.animateNumber.min.js' %}"></script>
   <script src="js2/aos.js"></script>
-
   <script src="{% static 'js2/main.js' %}"></script>
 
 </body>
