coloquei uma tabela para visualizar os produtos na página do administrador

--- a/core/static/css/estilo.css
+++ b/core/static/css/estilo.css
@@ -35,3 +35,7 @@ btn btn-primary{
 	color: purple !important;
 	background: purple !important;
 }
+.list{
+	color: black;
+	font-family: Times New Roman;
+}
