--- a/templates/info.html
+++ b/templates/info.html
@@ -7,21 +7,41 @@
 <link rel="stylesheet" type="text/css"
 href="/static/css/estilo.css">
 
-<div class="row">
-	{% for lista in lista_Produto %}
-		<div class="col-2 text-center"> 
-	    	{{lista.nome}}
-	        {{lista.valor}}
-	        <img src="/foto/{{lista.foto}}" class="img-fluid" width="150px" height="150px">
-	        <p class="btn btn-primary">{{lista.curtidas}} curtidas</p>
-        </div>
+  <p class="h3 mb-3 font-weight-normal">Gerenciamento de Produtos</p>
 
-	{% empty %}
-    	Nenhum produto foi cadastrado
-	{% endfor %}
+    <div class="row">
+      <div class="col-lg-12 mb-12">
+
+  <table class="table">
+              <thead class="thead-light">
+                <tr>
+                  <th scope="col">Produto</th>
+                  <th scope="col">Valor</th>
+                  <th scope="col">Curtidas</th>
+                  <th scope="col">Foto</th>
+                  <th scope="col">Gerenciar</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for lista in lista_Produto %}
+                <tr>
+                  <th scope="row">{{lista.nome}}</th>
+                    <td>{{lista.valor}}</td>
+                    <td>{{lista.curtidas}}</td>
+                    <td><img src="/foto/{{lista.foto}}" class="img-fluid rounded img-thumbnail" width="100px" height="100px"></td>
+                    <td>
+                      <a href="{% url 'excluir' lista.id %}"><button type="button" class="btn btn-danger">Excluir</button></a>
+                  </td>
 
 
-</div>
+                </tr>
+                {% empty %}
+                Nenhum produto foi cadastrado
+                {% endfor %}
+
+              </tbody>
+    </table>
+
 <p><a href="{% url 'produto' %}">Cadastrar Produto</a></p>
 
 {% endblock %}
