--- a/templates/info.html
+++ b/templates/info.html
@@ -21,7 +21,7 @@ href="/static/css/estilo.css">
                   <th scope="col">Foto</th>
                   <th scope="col">Gerenciar</th>
                 </tr>
-              </thead>
+              </thead>S
               <tbody>
                 {% for lista in lista_Produto %}
                 <tr>
