--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,6 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 
 <body class="b" data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 
-
  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Alterna navegação">
     <span class="navbar-toggler-icon"></span>
@@ -77,8 +76,17 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 </nav>
 {% block conteudo %}
 
+<div class="container-fluid">
 
-<div class="row d-flex justify-content-center">
+<div class="row">
+
+  <div class="col-lg-6 text-center">
+    <p class="bout">BOUTIQUE
+    <br/>
+    DA LUH</p>
+</div>
+
+  <div class="col-lg-6">
         <div id="carouselExampleIndicators" class="carousel slide centro" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -112,7 +120,11 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
                 <span class="sr-only">Next</span>
             </a>
         </div>
-    </div> 
+    </div>
+    </div>
+</div>
+
+
  <!--<div class="site-wrap"  id="home-section">
 
     <div class="site-mobile-menu site-navbar-target">
@@ -151,6 +163,10 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
     </div>-->
 
   {% endblock %}
+
+<nav class="navbar fixed-bottom navbar-purple bg-light">
+  <h1>Deixe Seu Estilo Florescer!</h1>
+</nav>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
   crossorigin="anonymous"></script>
