--- a/templates/usuario.html
+++ b/templates/usuario.html
@@ -9,28 +9,27 @@
 <link rel="stylesheet" type="text/css"
 href="/static/css/estilo.css">
 
-<div class="row">
-	<div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 text-center"> 
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-lg-3">
+
 	{% for lista in lista_Produto %}
 	        <img src="/foto/{{lista.foto}}" class="img-fluid rounded img-thumbnail" width="200px" height="200px">
-	    </br>
+	    <br/>
 	        {{lista.nome}}
-	    </br>
-	        {{lista.valor}}
-	    </br> 
+	    <br/>
+	        {{lista.valor}} 
 	        {% if lista|curtido:user %}
 	        	<button class="btn btn-primary" disabled>Curtido</button>
 	        {% else %}
 	        	<a href="{% url 'produto_favoritar' lista.id %}" class="btn btn-primary">Curtir</a>
 	        {% endif %}
-        </div>
-    </div>
         
 	{% empty %}
     	Nenhum produto foi cadastrado
 	{% endfor %}
-
-
+</div>
+</div>
+</div>
 {% endblock %}
-
 
