--- a/templates/index.html
+++ b/templates/index.html
@@ -79,13 +79,6 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 <div class="container-fluid">
 
 <div class="row">
-
-  <div class="col-lg-6 text-center">
-    <p class="bout">BOUTIQUE
-    <br/>
-    DA LUH</p>
-</div>
-
   <div class="col-lg-6">
         <div id="carouselExampleIndicators" class="carousel slide centro" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -95,17 +88,17 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
             </ol>
 
             <br>
-            <div class="carousel-inner">
+            <div class="carousel-inner canto">
                 <div class="carousel-item active" class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                    <img class="d-block w-100 im" src="{% static 'imagens/xadrez.jpeg' %}" alt="First slide" width="900px" height="500px">
+                    <img class="d-block w-100 im canto" src="{% static 'imagens/xadrez.jpeg' %}" alt="First slide" width="900px" height="500px">
                 </div>
 
                 <div class="carousel-item" class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-                    <img class="d-block w-100 im" src="{% static 'imagens/vestido.jpeg' %}" alt="Second slide" width="900px" height="500px">
+                    <img class="d-block w-100 im canto" src="{% static 'imagens/vestido.jpeg' %}" alt="Second slide" width="900px" height="500px">
                 </div>
 
                 <div class="carousel-item" class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-                    <img class="d-block w-100 im" src="{% static 'imagens/sabrina.jpeg' %}" alt="Third slide" width="900px" height="500px" >
+                    <img class="d-block w-100 im canto" src="{% static 'imagens/sabrina.jpeg' %}" alt="Third slide" width="900px" height="500px" >
                 </div>
             </div>
             
@@ -120,9 +113,17 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
                 <span class="sr-only">Next</span>
             </a>
         </div>
-    </div>
-    </div>
+      </div>
+
+  <div class="col-lg-6 text-center">
+    <p class="bout">BOUTIQUE
+    <br/>
+    DA LUH</p>
 </div>
+
+    </div>
+  </div>
+
 
 
  <!--<div class="site-wrap"  id="home-section">
