--- a/core/static/css/estilo.css
+++ b/core/static/css/estilo.css
@@ -2,8 +2,11 @@
 	font-weight: bold;
 	font-size: 18px;
 }
+.canto{
+	border-radius: 15px
+}
 .b{
-	background-image: linear-gradient(rgba(0, 0, 0, 0.12), rgba(0, 0, 0, 0.12)), url(imagem1.jpg);
+	background-image: linear-gradient(rgba(0, 0, 0, 0.12), rgba(0, 0, 0, 0.12)), border-radius:15px, url(imagem1.jpg);
 	background-color: white;
 	display: block;
 	padding: 0 !important;
