--- a/templates/info.html
+++ b/templates/info.html
@@ -7,31 +7,38 @@
 <link rel="stylesheet" type="text/css"
 href="/static/css/estilo.css">
 
-  <p class="h3 mb-3 font-weight-normal">Gerenciamento de Produtos</p>
-
+<div class="container-fluid">
     <div class="row">
       <div class="col-lg-12 mb-12">
 
-  <table class="table">
-              <thead class="thead-light">
+         <p class="h3 mb-3 font-weight-normal gern">Gerenciamento de Produtos</p>
+          <div class="row">
+      <div class="col-lg-12 mb-12">
+        <p><a href="{% url 'produto' %}"><button type="button" class="btn btn-danger ">Cadastrar Produto</button></a></p>
+      </div>
+    </div>
+
+
+  <table class="table table-light table-striped">
+              <thead class="thead-dark">
                 <tr>
                   <th scope="col">Produto</th>
                   <th scope="col">Valor</th>
                   <th scope="col">Curtidas</th>
                   <th scope="col">Foto</th>
                   <th scope="col">Gerenciar</th>
-                </tr>
-              </thead>S
+                </tr> 
+              </thead>
               <tbody>
                 {% for lista in lista_Produto %}
                 <tr>
                   <th scope="row">{{lista.nome}}</th>
-                    <td>{{lista.valor}}</td>
-                    <td>{{lista.curtidas}}</td>
-                    <td><img src="/foto/{{lista.foto}}" class="img-fluid rounded img-thumbnail" width="100px" height="100px"></td>
-                    <td>
-                      <a href="{% url 'excluir' lista.id %}"><button type="button" class="btn btn-danger">Excluir</button></a>
-                  </td>
+                    <th>{{lista.valor}}</th>
+                    <th>{{lista.curtidas}}</th>
+                    <th><img src="/foto/{{lista.foto}}" class="img-fluid img-thumbnail" width="100px" height="100px"></th>
+                    <th>
+                      <a href="{% url 'excluir' lista.id %}"><button type="button" class="btn btn-danger ">Excluir</button></a>
+                  </th>
 
 
                 </tr>
@@ -41,7 +48,8 @@ href="/static/css/estilo.css">
 
               </tbody>
     </table>
-
-<p><a href="{% url 'produto' %}">Cadastrar Produto</a></p>
+</div>
+</div>
+</div>
 
 {% endblock %}
