--- a/templates/usuario.html
+++ b/templates/usuario.html
@@ -30,6 +30,17 @@ href="/static/css/estilo.css">
 	{% endfor %}
 </div>
 </div>
+
+<br/>
+<br/>
+<br/>
+<br/>
+
+<nav class="navbar fixed-bottom navbar-light bg-light">
+  <p class="centro">Deixe Seu Estilo Florescer!</p>
+  <p class="ender">Rua Dom Nivaldo Monte, 09, Centro, Goianinha/Rn.</p>
+</nav>
+
 </div>
 {% endblock %}
 
