--- a/templates/index.html
+++ b/templates/index.html
@@ -20,10 +20,6 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
   	<meta name="description" content="">
   	<meta name="author" content="">	
 
-
-
-
-
     <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700|Anton" rel="stylesheet">
     
 
@@ -116,58 +112,51 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
       </div>
 
   <div class="col-lg-6 text-center">
-    <p class="bout">BOUTIQUE
-    <br/>
-    DA LUH</p>
+            <div id="carouselExampleIndicators" class="carousel slide centro" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+
+            <br>
+            <div class="carousel-inner canto">
+                <div class="carousel-item active" class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                    <img class="d-block w-100 im canto" src="{% static 'imagens/linha.jpg' %}" alt="First slide" width="900px" height="500px">
+                </div>
+
+                <div class="carousel-item" class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
+                    <img class="d-block w-100 im canto" src="{% static 'imagens/blusa.jpg' %}" alt="Second slide" width="900px" height="500px">
+                </div>
+
+                <div class="carousel-item" class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
+                    <img class="d-block w-100 im canto" src="{% static 'imagens/plus.jpg' %}" alt="Third slide" width="900px" height="500px" >
+                </div>
+            </div>
+            
+
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
 </div>
 
     </div>
+
+<nav class="navbar fixed-bottom navbar-light bg-light">
+  <p class="centro">Deixe Seu Estilo Florescer!</p>
+  <p class="ender">Rua Dom Nivaldo Monte, 09, Centro, Goianinha/Rn.</p>
+</nav>
+
   </div>
 
-
-
- <!--<div class="site-wrap"  id="home-section">
-
-    <div class="site-mobile-menu site-navbar-target">
-      <div class="site-mobile-menu-header">
-        <div class="site-mobile-menu-close mt-3">
-          <span class="icon-close2 js-menu-toggle"></span>
-        </div>
-      </div>
-      <div class="site-mobile-menu-body"></div>
-    </div>
-<header class="site-navbar js-sticky-header site-navbar-target" role="banner">
-
-      <div class="container">
-        <div class="row align-items-center position-relative">
-            <div class="site-logo">
-              <a href="{% url 'index' %}" class="text-black"><span class="text-primary">Boutique da Luh</a>
-            </div>
-            
-              <nav class="site-navigation text-center ml-auto" role="navigation">
-
-                <ul class="site-menu main-menu js-clone-nav ml-auto d-none d-lg-block">
-                  <li class="temp"><a href="
-                  <li class="temp"><a href="{% url 'account_login' %}" class="nav-link">Login</a></li>
-                  <li class="temp"><a href="{% url 'account_signup' %}" class="nav-link">Cadastro</a></li>
-                </ul>
-              </nav>
-              <div class="toggle-button d-inline-block d-lg-none"><a href="#" class="site-menu-toggle py-5 js-menu-toggle text-black"><span class="icon-menu h3"></span></a></div>
-              </ul>
-        </div>
-      </div>
-    </header>-->
-    
-    <!--<div class="owl-carousel slide-one-item">
-      <a href="#"><img src="imagens/xadrez.jpeg" alt="Image" class="img-fluid"></a>
-      <a href="#"><img src="imagens/vestido.jpeg" alt="Image" class="img-fluid"></a>
-    </div>-->
-
   {% endblock %}
-
-<nav class="navbar fixed-bottom navbar-purple bg-light">
-  <h1>Deixe Seu Estilo Florescer!</h1>
-</nav>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
   crossorigin="anonymous"></script>
@@ -179,7 +168,6 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
   src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
   integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
   crossorigin="anonymous"></script>
-
 
 
   <script type="text/javascript" src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
