--- a/templates/index.html
+++ b/templates/index.html
@@ -77,17 +77,16 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 
 <div class="row">
   <div class="col-lg-6">
-        <div id="carouselExampleIndicators" class="carousel slide centro" data-ride="carousel">
+            <div id="carouselExampleIndicators" class="carousel slide centro" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
             </ol>
-
-            <br>
+            
             <div class="carousel-inner canto">
                 <div class="carousel-item active" class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                    <img class="d-block w-100 im canto" src="{% static 'imagens/xadrez.jpeg' %}" alt="First slide" width="900px" height="500px">
+                    <img class="d-block w-100 im canto" src="{% static 'imagens/sabrina.jpeg' %}" alt="First slide" width="900px" height="500px">
                 </div>
 
                 <div class="carousel-item" class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
@@ -95,7 +94,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
                 </div>
 
                 <div class="carousel-item" class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-                    <img class="d-block w-100 im canto" src="{% static 'imagens/sabrina.jpeg' %}" alt="Third slide" width="900px" height="500px" >
+                    <img class="d-block w-100 im canto" src="{% static 'imagens/xadrez.jpeg' %}" alt="Third slide" width="900px" height="500px" >
                 </div>
             </div>
             
@@ -119,7 +118,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
             </ol>
-            
+
             <div class="carousel-inner canto">
                 <div class="carousel-item active" class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                     <img class="d-block w-100 im canto" src="{% static 'imagens/blusa.jpg' %}" alt="First slide" width="900px" height="500px">
