--- a/templates/produto.html
+++ b/templates/produto.html
@@ -33,4 +33,9 @@
           <button type="submit" class="btn btn-primary" id="sendMessageButton">Salvar</button></a></p>
     </form>
 
+ <nav class="navbar fixed-bottom navbar-light bg-light">
+  <p class="centro">Deixe Seu Estilo Florescer!</p>
+  <p class="ender">Rua Dom Nivaldo Monte, 09, Centro, Goianinha/Rn.</p>
+</nav>
+
 {% endblock %}
