--- a/templates/index.html
+++ b/templates/index.html
@@ -86,15 +86,15 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
             
             <div class="carousel-inner canto">
                 <div class="carousel-item active" class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                    <img class="d-block w-100 im canto" src="{% static 'imagens/sabrina.jpeg' %}" alt="First slide" width="900px" height="500px">
+                    <img class="d-block w-100" src="{% static 'imagens/sabrina.jpeg' %}" alt="First slide" width="900px" height="500px">
                 </div>
 
                 <div class="carousel-item" class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-                    <img class="d-block w-100 im canto" src="{% static 'imagens/vestido.jpeg' %}" alt="Second slide" width="900px" height="500px">
+                    <img class="d-block w-100" src="{% static 'imagens/vestido.jpeg' %}" alt="Second slide" width="900px" height="500px">
                 </div>
 
                 <div class="carousel-item" class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-                    <img class="d-block w-100 im canto" src="{% static 'imagens/xadrez.jpeg' %}" alt="Third slide" width="900px" height="500px" >
+                    <img class="d-block w-100" src="{% static 'imagens/xadrez.jpeg' %}" alt="Third slide" width="900px" height="500px" >
                 </div>
             </div>
             
@@ -121,15 +121,15 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 
             <div class="carousel-inner canto">
                 <div class="carousel-item active" class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                    <img class="d-block w-100 im canto" src="{% static 'imagens/blusa.jpg' %}" alt="First slide" width="900px" height="500px">
+                    <img class="d-block w-100" src="{% static 'imagens/blusa.jpg' %}" alt="First slide" width="900px" height="500px">
                 </div>
 
                 <div class="carousel-item" class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-                    <img class="d-block w-100 im canto" src="{% static 'imagens/linha.jpg' %}" alt="Second slide" width="900px" height="500px">
+                    <img class="d-block w-100" src="{% static 'imagens/linha.jpg' %}" alt="Second slide" width="900px" height="500px">
                 </div>
 
                 <div class="carousel-item" class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-                    <img class="d-block w-100 im canto" src="{% static 'imagens/plus.jpg' %}" alt="Third slide" width="900px" height="500px" >
+                    <img class="d-block w-100" src="{% static 'imagens/plus.jpg' %}" alt="Third slide" width="900px" height="500px" >
                 </div>
             </div>
             
