--- a/templates/info.html
+++ b/templates/info.html
@@ -10,7 +10,7 @@ href="/static/css/estilo.css">
 <div class="container-fluid">
     <div class="row">
       <div class="col-lg-12 mb-12">
-          <p class="h3 mb-3 font-weight-normal gern">Gerenciamento de Produtos</p>
+          <p class="h3 mb-3 font-weight- gern">Gerenciamento de Produtos</p>
         </div>
       </div>
 
