--- a/templates/produto.html
+++ b/templates/produto.html
@@ -5,6 +5,8 @@
 
 {% block conteudo %}
 
+<div class="container-fluid">
+
 <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
 
@@ -32,6 +34,8 @@
 
           <button type="submit" class="btn btn-primary" id="sendMessageButton">Salvar</button></a></p>
     </form>
+
+</div>
 
  <nav class="navbar fixed-bottom navbar-light bg-light">
   <p class="centro">Deixe Seu Estilo Florescer!</p>
