--- a/templates/info.html
+++ b/templates/info.html
@@ -5,7 +5,7 @@
 {% block conteudo %}
 
 <link rel="stylesheet" type="text/css"
-href="/static/css/estilo.css">
+href="{% static 'css/estilo.css' %}">
 
 <div class="container-fluid">
     <div class="row">
