--- a/templates/index.html
+++ b/templates/index.html
@@ -20,10 +20,10 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
   	<meta name="description" content="">
   	<meta name="author" content="">	
 
-    <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700|Anton" rel="stylesheet">
+    <!--<link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700|Anton" rel="stylesheet">
     
-
-    <link rel="stylesheet" href="fonts/icomoon/style.css">
+-->
+    <link rel="stylesheet" href="{% static 'fonts/icomoon/style.css' %}">
 
     <link rel="stylesheet" href="{% static 'css2/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css2/magnific-popup.css' %}">
@@ -179,7 +179,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
   <script src="{% static 'js2/jquery.sticky.js' %}"></script>
   <script src="{% static 'js2/jquery.waypoints.min.js' %}"></script>
   <script src="{% static 'js2/jquery.animateNumber.min.js' %}"></script>
-  <script src="js2/aos.js"></script>
+  <script src="{% static 'js2/aos.js' %}"></script>
   <script src="{% static 'js2/main.js' %}"></script>
 
 </body>
