--- a/templates/usuario.html
+++ b/templates/usuario.html
@@ -4,26 +4,32 @@
 {% load core_extras %}
 
 {% block conteudo %}
-<link rel="stylesheet" type="text/css"
-href="/static/css/estilo.css">
+<link rel="stylesheet" type="text/css" href="{% static 'css/estilo.css' %}">
 
 <div class="container-fluid">
-	<div class="row">
+		<div class="row">
 		{% for lista in lista_Produto %}
 		<div class="col-lg-3">
-	        <img src="/foto/{{lista.foto}}" class="img-fluid img-thumbnail" width="200px" height="200px">
+	       <p> <img src="/foto/{{lista.foto}}" class="img-fluid img-thumbnail" width="200px" height="200px"></p>
         
-</div>
 
-<div class="col-lg-3"> <p> {{lista.nome}} </p></div>
-<div class="col-lg-3"> <p> {{lista.valor}} </p></div>
-<div class="col-lg-3"><p> {% if lista|curtido:user %}
+
+<div class="col-lg-3"> <p class="int"> {{lista.nome}} </p>
+<div class="col-lg-3"> <p class="int"> {{lista.valor}} </p>
+<div class="col-lg-3"> <p class="int"> {% if lista|curtido:user %}
 	        	<button class="btn btn-primary" disabled>Curtido</button>
 	        {% else %}
 	        	<a href="{% url 'produto_favoritar' lista.id %}" class="btn btn-primary">Curtir</a>
 	        {% endif %} </p>
+
+
 </div>
 </div>
+</div>
+</div>
+</div>
+
+
 
 {% empty %}
     	Nenhum produto foi cadastrado
