--- a/templates/info.html
+++ b/templates/info.html
@@ -20,7 +20,7 @@ href="{% static 'css/estilo.css' %}">
       </div>
   </div>
 
-  <table class="table table-light table-striped">
+  <table class="table table-light table-striped table-hover table-bordered">
               <thead class="thead-dark">
                 <tr>
                   <th scope="col">Produto</th>
@@ -38,11 +38,12 @@ href="{% static 'css/estilo.css' %}">
                     <th>{{lista.curtidas}}</th>
                     <th><img src="/foto/{{lista.foto}}" class="img-fluid rounded img-thumbnail" width="100px" height="100px"></th>
                     <th>
+                      <a href="{% url 'editar' lista.id %}"><button type="button" class="btn btn-danger">Editar</button></a>
                       <a href="{% url 'excluir' lista.id %}"><button type="button" class="btn btn-danger">Excluir</button></a>
                   </th>
                 </tr>
                 {% empty %}
-                Nenhum produto foi cadastrado
+                <p class="bouti">Nenhum produto foi cadastrado</p>
                 {% endfor %}
 
               </tbody>
