--- a/core/static/css/estilo.css
+++ b/core/static/css/estilo.css
@@ -1,3 +1,9 @@
+.img{
+	width: 60%;
+	max-width: 230px;
+	height: 60%;
+	max-height: 280px
+}
 .temp{
 	font-weight: bold;
 	font-size: 18px;
@@ -56,7 +62,7 @@ nav.bg-light{
 .gern{
 	color: purple;
 	font-size: 40px;
-	font-family: Times New Roman;
+	font-family: calibri;
 }
 .ender, .centro{
 	color: white;
@@ -64,8 +70,19 @@ nav.bg-light{
 	font-family: calibri;
 }
 .int{
-	font-size: 18px;
+	font-size: 21px;
 	font-family: calibri;
 	text-align: center;
 
+}
+.bouti{
+	font-weight: bolder;
+	font-family: calibri;
+}
+.bor{
+	color: purple;
+	font-size: 20px;
+	font-weight: bolder;
+	border-bottom: 2px solid purple;
+	margin-bottom: 50px;
 }
